--- a/layout/product-2.html
+++ b/layout/product-2.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20231225203242">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20231225203242">
-	<link rel="stylesheet" href="css/style.min.css?_v=20231225203242">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240119124839">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20240119124839">
+	<link rel="stylesheet" href="css/style.min.css?_v=20240119124839">
 
 
 </head>
@@ -237,19 +237,19 @@
 											<div class="main__product-thumbs swiper">
 												<div class="swiper-wrapper">
 													<a href="img/products/product-2.png" data-fslightbox class="main__product-slide swiper-slide">
-														<picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" class="cover-image" alt="product"></picture>
+														<picture><source srcset="img/products/04.webp"type="image/webp"><img src="img/products/04.png" alt="product"></picture>
 													</a>
 													<a href="img/products/product-3.png" data-fslightbox class="main__product-slide swiper-slide">
-														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" class="cover-image" alt="product"></picture>
+														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" alt="product"></picture>
 													</a>
 													<a href="img/products/product-1.png" data-fslightbox class="main__product-slide swiper-slide">
-														<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" class="cover-image" alt="product"></picture>
+														<picture><source srcset="img/products/product-1.webp"type="image/webp"><img src="img/products/product-1.png" alt="product"></picture>
 													</a>
 													<a href="img/products/product-2.png" data-fslightbox class="main__product-slide swiper-slide">
-														<picture><source srcset="img/products/product-2.webp"type="image/webp"><img src="img/products/product-2.png" class="cover-image" alt="product"></picture>
+														<picture><source srcset="img/products/product-2.webp"type="image/webp"><img src="img/products/product-2.png" alt="product"></picture>
 													</a>
 													<a href="img/products/product-3.png" data-fslightbox class="main__product-slide swiper-slide">
-														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" class="cover-image" alt="product"></picture>
+														<picture><source srcset="img/products/product-3.webp"type="image/webp"><img src="img/products/product-3.png" alt="product"></picture>
 													</a>
 												</div>
 											</div>
@@ -932,6 +932,12 @@
                 <a href="/privacy.html" class="footer-copy__privacy-link">
                     Политика конфиденциальности
                 </a>
+                <a href="" class="footer-copy__privacy-link">
+                    Антикоррупционная политика
+                </a>
+                <a href="" class="footer-copy__privacy-link">
+                    Кодекс этики и служебного поведения
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
@@ -945,16 +951,16 @@
     </div>
 </footer>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20231225203242"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20231225203242"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20240119124839"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20240119124839"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20231225203242"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20231225203242"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20231225203242"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20231225203242"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20231225203242"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20231225203242"></script>
-<script src="js/app.min.js?_v=20231225203242"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20240119124839"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20240119124839"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20240119124839"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20240119124839"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20240119124839"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20240119124839"></script>
+<script src="js/app.min.js?_v=20240119124839"></script>
 	</body>
 
 </html>
