--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -1605,6 +1605,11 @@ body._pc .anim-content .products.active .products__item {
   transition: color 0.3s ease 0s;
 }
 
+.footer-copy__privacy-link:first-child {
+  -ms-grid-row-span: 2;
+  grid-row: span 2;
+}
+
 .footer-copy__privacy-link:not(:last-child) {
   margin: 0em 0.625em 0em 0em;
 }
@@ -5096,9 +5101,9 @@ body._pc .anim-content .products.active .products__item {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
 
   .footer-copy__privacy {
@@ -5749,10 +5754,14 @@ body._pc .anim-content .products.active .products__item {
   }
 
   .footer-copy__privacy {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-rows: (1fr)[2];
+    grid-template-rows: repeat(2, 1fr);
+    grid-auto-flow: column;
+    -webkit-column-gap: 1rem;
+       -moz-column-gap: 1rem;
+            column-gap: 1rem;
   }
 
   .footer-copy__privacy-link:not(:last-child) {
@@ -6309,6 +6318,9 @@ body._pc .anim-content .products.active .products__item {
   }
 
   .footer-copy__privacy {
+    -webkit-column-gap: 2rem;
+       -moz-column-gap: 2rem;
+            column-gap: 2rem;
     margin: 0em 0em 0em auto;
   }
 
