--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -2816,11 +2816,11 @@ body._pc .anim-content .products.active .products__item {
   margin: 0em 0em 1em 0rem;
 }
 
-.article__content > ul {
+.article__content ul {
   margin: 0em 0em 1.5rem 0rem;
 }
 
-.article__content > ul li {
+.article__content ul > li {
   position: relative;
   font-size: 14px;
   font-weight: 500;
@@ -2829,13 +2829,10 @@ body._pc .anim-content .products.active .products__item {
   padding: 0em 0em 0em 0.8888888889em;
 }
 
-.article__content > ul li::before {
+.article__content ul > li::before {
   content: "";
   position: absolute;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 0.5rem;
   left: 0;
   width: 0.4444444444em;
   height: 0.4444444444em;
@@ -2843,18 +2840,18 @@ body._pc .anim-content .products.active .products__item {
   background: #ff6859;
 }
 
-.article__content > ul li:not(:last-child) {
+.article__content ul > li:not(:last-child) {
   margin: 0em 0em 0.8888888889em 0rem;
 }
 
-.article__content > p {
+.article__content p {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.3888888889;
   color: #7b7e89;
 }
 
-.article__content > p mark {
+.article__content p mark {
   background: none;
   display: block;
   padding: 0em 0em 0em 1em;
@@ -2865,35 +2862,11 @@ body._pc .anim-content .products.active .products__item {
   line-height: 1.625;
 }
 
-.article__content > strong {
+.article__content strong {
   display: inline-block;
   margin: 0em 0em 1.6666666667em 0em;
   font-weight: 500;
   line-height: 1.2916666667;
-}
-
-.article__content > ol {
-  margin: 0em 0em 1.5rem 0rem;
-}
-
-.article__content > ol li {
-  position: relative;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.3888888889;
-  color: #7b7e89;
-  counter-increment: num;
-}
-
-.article__content > ol li::before {
-  content: counter(num) ")";
-  color: #ff6859;
-  font-weight: 600;
-  padding: 0em 0.625em 0em 0em;
-}
-
-.article__content > ol li:not(:last-child) {
-  margin: 0em 0em 0.8888888889em 0rem;
 }
 
 .article__content h1 {
@@ -2917,11 +2890,11 @@ body._pc .anim-content .products.active .products__item {
   margin: 0em 0em 1.5rem 0rem;
 }
 
-.article__content div > ul {
+.article__content div ul {
   margin: 0em 0em 1.5rem 0rem;
 }
 
-.article__content div > ul li {
+.article__content div ul > li {
   position: relative;
   font-size: 14px;
   font-weight: 500;
@@ -2930,13 +2903,11 @@ body._pc .anim-content .products.active .products__item {
   padding: 0em 0em 0em 0.8888888889em;
 }
 
-.article__content div > ul li::before {
+.article__content div ul > li::before {
   content: "";
   position: absolute;
   top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: 0.5rem;
   left: 0;
   width: 0.4444444444em;
   height: 0.4444444444em;
@@ -2944,22 +2915,22 @@ body._pc .anim-content .products.active .products__item {
   background: #ff6859;
 }
 
-.article__content div > ul li:not(:last-child) {
+.article__content div ul > li:not(:last-child) {
   margin: 0em 0em 0.8888888889em 0rem;
 }
 
-.article__content div > p {
+.article__content div p {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.3888888889;
   color: #7b7e89;
 }
 
-.article__content div > p:not(:last-child) {
+.article__content div p:not(:last-child) {
   margin: 0em 0em 1.3333333333em 0rem;
 }
 
-.article__content div > p mark {
+.article__content div p mark {
   background: none;
   display: block;
   padding: 0em 0em 0em 1em;
@@ -2970,18 +2941,18 @@ body._pc .anim-content .products.active .products__item {
   line-height: 1.625;
 }
 
-.article__content div > strong {
+.article__content div strong {
   display: inline-block;
   margin: 0em 0em 1.6666666667em 0em;
   font-weight: 500;
   line-height: 1.2916666667;
 }
 
-.article__content div > ol {
-  margin: 0em 0em 1.5rem 0rem;
+.article__content div ol {
+  margin: 0.625em 0em 1.5rem 0rem;
 }
 
-.article__content div > ol li {
+.article__content div ol > li {
   position: relative;
   font-size: 14px;
   font-weight: 500;
@@ -2990,14 +2961,13 @@ body._pc .anim-content .products.active .products__item {
   counter-increment: num;
 }
 
-.article__content div > ol li::before {
+.article__content div ol > li::before {
   content: counter(num) ")";
-  color: #ff6859;
   font-weight: 600;
   padding: 0em 0.625em 0em 0em;
 }
 
-.article__content div > ol li:not(:last-child) {
+.article__content div ol > li:not(:last-child) {
   margin: 0em 0em 0.8888888889em 0rem;
 }
 
@@ -5328,43 +5298,39 @@ body._pc .anim-content .products.active .products__item {
     font-size: 24px;
   }
 
-  .article__content > ul li {
+  .article__content ul > li {
     font-size: 18px;
   }
 
-  .article__content > p {
+  .article__content p {
     font-size: 18px;
   }
 
-  .article__content > p mark {
+  .article__content p mark {
     font-size: 16px;
   }
 
-  .article__content > strong {
+  .article__content strong {
     font-size: 24px;
   }
 
-  .article__content > ol li {
+  .article__content div ul > li {
     font-size: 18px;
   }
 
-  .article__content div > ul li {
+  .article__content div p {
     font-size: 18px;
   }
 
-  .article__content div > p {
-    font-size: 18px;
-  }
-
-  .article__content div > p mark {
+  .article__content div p mark {
     font-size: 16px;
   }
 
-  .article__content div > strong {
+  .article__content div strong {
     font-size: 24px;
   }
 
-  .article__content div > ol li {
+  .article__content div ol > li {
     font-size: 18px;
   }
 
