--- a/src/site/templates/home.htm
+++ b/src/site/templates/home.htm
@@ -3,14 +3,14 @@
                         <div class="production__body">
                             {{SLIDER}}
                             <div class="production__products">
-                                <a href="/production/" class="production__product">
+                                <!-- <a href="/production/" class="production__product">
                                     <span class="production__product-image">
                                         <picture><source srcset="/img/scaling/product-1.webp?1" type="image/webp"><img src="/img/scaling/product-1.png?1" alt="Арматура для СИП"></picture>
                                     </span>
                                     <span class="production__product-name">
                                         Собственное <br> производство арматуры для&nbsp;СИП
                                     </span>
-                                </a>
+                                </a> -->
                                 <a href="/company/stores/" class="production__product">
                                     <span class="production__product-image production__product-image-offset">
                                         <picture><source srcset="/img/scaling/product-2.webp?1" type="image/webp"><img src="/img/scaling/product-2.png?1" alt="Комплексные поставки"></picture>
