--- a/src/site/templates/company/company.htm
+++ b/src/site/templates/company/company.htm
@@ -11,7 +11,7 @@
                         </div>
                     </div>
                 </section>
-            <section class="about">
+            <!-- <section class="about">
                 <div class="about__container">
                     <div class="about__body">
                         {{CONTENTTOP}}                        
@@ -20,7 +20,7 @@
                         <picture><source srcset="/img/production.webp"type="image/webp"><img src="/img/production.jpg" class="cover-image" alt="production"></picture>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <section class="deliveries">
                     <div class="deliveries__container">
                         <h2 class="deliveries__title title-xl">
