--- a/layout/privacy.html
+++ b/layout/privacy.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240119185059">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20240119185059">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240119185059">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250221193644">
 
 
 </head>
@@ -581,6 +581,9 @@
                 <a href="" class="footer-copy__privacy-link">
                     Кодекс этики и служебного поведения
                 </a>
+                <a href="" class="footer-copy__privacy-link">
+                    Политика в области прав человека
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
@@ -594,16 +597,18 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20240119185059"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250221193644"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20240119185059"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20240119185059"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20240119185059"></script>
-<script src="js/app.min.js?_v=20240119185059"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250221193644"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250221193644"></script>
+<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250221193644"></script> -->
+<script src="https://vk.com/js/api/openapi.js?169&_v=20250221193644"></script>
+
+<script src="js/app.min.js?_v=20250221193644"></script>
 </body>
 
 </html>
