--- a/layout/index.html
+++ b/layout/index.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20240119185059">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20240119185059">
-	<link rel="stylesheet" href="css/style.min.css?_v=20240119185059">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250221193644">
 
 
 </head>
@@ -272,7 +272,8 @@
 				<section class="video">
     <div class="video__container">
         <div class="video__content">
-            <button type="button" data-modal="modal" data-video data-video-code-rus="DXLm5K8-Q-Y" data-video-code-eng="4ohKYfQ86P0" class="video__btn icon-play"></button>
+            <button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-code-eng="456239018" data-video-owner="-227578172" class="video__btn icon-play">
+            </button>
             <div class="video__main">
                 <h2 class="video__title title-md">
                     Видео о нас
@@ -581,6 +582,9 @@
                 <a href="" class="footer-copy__privacy-link">
                     Кодекс этики и служебного поведения
                 </a>
+                <a href="" class="footer-copy__privacy-link">
+                    Политика в области прав человека
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
@@ -598,17 +602,16 @@
     <div class="popup__content">
         <button type="button" class="popup__close icon-close"></button>
         <div class="popup__body">
-            <div id="js-youtube-video"></div>
-
+            <div id="js-vk-video"></div>
             <div class="popup__switcher video__switcher">
                 <ul class="video__switcher-list">
                     <li class="video__switcher-item">
-                        <a href="DXLm5K8-Q-Y" data-lang="ru" class="video__switcher-btn">
+                        <a href="#" data-lang="ru" class="video__switcher-btn">
                             Руc
                         </a>
                     </li>
                     <li class="video__switcher-item">
-                        <a href="4ohKYfQ86P0" data-lang="en" class="video__switcher-btn">
+                        <a href="#" data-lang="en" class="video__switcher-btn">
                             Eng
                         </a>
                     </li>
@@ -617,16 +620,18 @@
         </div>
     </div>
 </div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20240119185059"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250221193644"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20240119185059"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20240119185059"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20240119185059"></script>
-<script src="https://www.youtube.com/iframe_api?v2.18&_v=20240119185059"></script>
-<script src="js/app.min.js?_v=20240119185059"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250221193644"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250221193644"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250221193644"></script>
+<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250221193644"></script> -->
+<script src="https://vk.com/js/api/openapi.js?169&_v=20250221193644"></script>
+
+<script src="js/app.min.js?_v=20250221193644"></script>
 	</body>
 
 </html>
