--- a/layout/article.html
+++ b/layout/article.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250227083052">
 
 
 </head>
@@ -285,7 +285,7 @@
 								</div>
 								<div class="article__video">
 									<picture><source srcset="img/news/slider/01.webp"type="image/webp"><img src="img/news/slider/01.jpg" class="cover-image" alt="PSK"></picture>
-									<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" class="article__video-btn icon-play-alternate"></button>
+									<button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-code-eng="456239018" data-video-owner="-227578172" class="article__video-btn icon-play-alternate"></button>
 								</div>
 								<div>
 									<h2>
@@ -599,18 +599,18 @@
         </div>
     </div>
 </div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250221193644"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250227083052"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250221193644"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250221193644"></script>
-<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250221193644"></script> -->
-<script src="https://vk.com/js/api/openapi.js?169&_v=20250221193644"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250227083052"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250227083052"></script>
+<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250227083052"></script> -->
+<script src="https://vk.com/js/api/openapi.js?169&_v=20250227083052"></script>
 
-<script src="js/app.min.js?_v=20250221193644"></script>
+<script src="js/app.min.js?_v=20250227083052"></script>
 	</body>
 
 </html>
