--- a/layout/media-video.html
+++ b/layout/media-video.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
+	<head>
 	<title> ПСК | Медиагалерея | Презентация бренда </title>
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
@@ -40,16 +40,16 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250227083052">
 
 
 </head>
 
-<body>
-	<div class="wrapper">
-		<header class="header header-white">
+	<body>
+		<div class="wrapper">
+			<header class="header header-white">
     <div class="header__top header-top">
         <div class="header-top__container">
             <a href="/" class="header-top__logo">
@@ -208,69 +208,69 @@
         </div>
     </nav>
 </header>
-		<main class="page">
-			<section class="page__main main">
-				<div class="main__container">
-					<div class="main__body main__body-md">
-						<ul class="main__navigation navigation">
-							<li class="navigation__item">
-								<a href="/" class="navigation__link">Главная</a>
-							</li>
-							<li class="navigation__item">
-								<a href="/about.html" class="navigation__link">О компании</a>
-							</li>
-							<li class="navigation__item">
-								<a href="/media.html" class="navigation__link">Медиагалерея</a>
-							</li>
-							<li class="navigation__item">
-								<a class="navigation__link active">Презентация бренда</a>
-							</li>
+			<main class="page">
+				<section class="page__main main">
+					<div class="main__container">
+						<div class="main__body main__body-md">
+							<ul class="main__navigation navigation">
+								<li class="navigation__item">
+									<a href="/" class="navigation__link">Главная</a>
+								</li>
+								<li class="navigation__item">
+									<a href="/about.html" class="navigation__link">О компании</a>
+								</li>
+								<li class="navigation__item">
+									<a href="/media.html" class="navigation__link">Медиагалерея</a>
+								</li>
+								<li class="navigation__item">
+									<a class="navigation__link active">Презентация бренда</a>
+								</li>
 
-						</ul>
-						<h1 class="main__title title-xl">
-							Презентация бренда
-						</h1>
+							</ul>
+							<h1 class="main__title title-xl">
+								Презентация бренда
+							</h1>
+						</div>
+					</div>
+					<canvas id="gradient-canvas" data-transition-in></canvas>
+				</section>
+				<div class="page__media media media-offset">
+					<div class="media__container">
+						<section class="media__section">
+							<div class="media__body">
+								<div class="media__item">
+									<div class="media__item-image">
+										<picture><source srcset="img/media/video/03.webp"type="image/webp"><img src="img/media/video/03.jpg" class="cover-image" alt="video desc"></picture>
+										<button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-owner="-227578172" class="media__item-btn icon-play-alternate"></button>
+									</div>
+									<div class="media__item-caption">
+										Энергосервис
+									</div>
+								</div>
+								<div class="media__item">
+									<div class="media__item-image">
+										<picture><source srcset="img/media/video/02.webp"type="image/webp"><img src="img/media/video/02.jpg" class="cover-image" alt="video desc"></picture>
+										<button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-owner="-227578172" class="media__item-btn icon-play-alternate"></button>
+									</div>
+									<div class="media__item-caption">
+										Презентация бренда
+									</div>
+								</div>
+								<div class="media__item">
+									<div class="media__item-image">
+										<picture><source srcset="img/media/video/01.webp"type="image/webp"><img src="img/media/video/01.jpg" class="cover-image" alt="video desc"></picture>
+										<button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-owner="-227578172" class="media__item-btn icon-play-alternate"></button>
+									</div>
+									<div class="media__item-caption">
+										Cabex-2022
+									</div>
+								</div>
+							</div>
+						</section>
 					</div>
 				</div>
-				<canvas id="gradient-canvas" data-transition-in></canvas>
-			</section>
-			<div class="page__media media media-offset">
-				<div class="media__container">
-					<section class="media__section">
-						<div class="media__body">
-							<div class="media__item">
-								<div class="media__item-image">
-									<picture><source srcset="img/media/video/03.webp"type="image/webp"><img src="img/media/video/03.jpg" class="cover-image" alt="video desc"></picture>
-									<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" class="media__item-btn icon-play-alternate"></button>
-								</div>
-								<div class="media__item-caption">
-									Энергосервис
-								</div>
-							</div>
-							<div class="media__item">
-								<div class="media__item-image">
-									<picture><source srcset="img/media/video/02.webp"type="image/webp"><img src="img/media/video/02.jpg" class="cover-image" alt="video desc"></picture>
-									<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" class="media__item-btn icon-play-alternate"></button>
-								</div>
-								<div class="media__item-caption">
-									Презентация бренда
-								</div>
-							</div>
-							<div class="media__item">
-								<div class="media__item-image">
-									<picture><source srcset="img/media/video/01.webp"type="image/webp"><img src="img/media/video/01.jpg" class="cover-image" alt="video desc"></picture>
-									<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" class="media__item-btn icon-play-alternate"></button>
-								</div>
-								<div class="media__item-caption">
-									Cabex-2022
-								</div>
-							</div>
-						</div>
-					</section>
-				</div>
-			</div>
-		</main>
-		<footer class="footer">
+			</main>
+			<footer class="footer">
     <div class="footer__body footer-body">
         <div class="footer-body__container">
             <div class="footer-body__main">
@@ -410,20 +410,20 @@
         </div>
     </div>
 </footer>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250221193644"></script>
+		</div>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250227083052"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250221193644"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250221193644"></script>
-<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250221193644"></script> -->
-<script src="https://vk.com/js/api/openapi.js?169&_v=20250221193644"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250227083052"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250227083052"></script>
+<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250227083052"></script> -->
+<script src="https://vk.com/js/api/openapi.js?169&_v=20250227083052"></script>
 
-<script src="js/app.min.js?_v=20250221193644"></script>
-	<div id="modal" class="popup">
+<script src="js/app.min.js?_v=20250227083052"></script>
+		<div id="modal" class="popup">
     <div class="popup__content">
         <button type="button" class="popup__close icon-close"></button>
         <div class="popup__body">
@@ -445,6 +445,6 @@
         </div>
     </div>
 </div>
-</body>
+	</body>
 
 </html>
