--- a/layout/scaling.html
+++ b/layout/scaling.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20250221193644">
-	<link rel="stylesheet" href="css/style.min.css?_v=20250221193644">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20250227083052">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250227083052">
 
 
 </head>
@@ -272,7 +272,7 @@
 				<section class="video">
 					<div class="video__container">
 						<div class="video__content">
-							<button type="button" data-modal="modal" data-video data-video-code-rus="C0E1oD1BhTY" data-video-code-eng="m_Dr1wyVwGI" class="video__btn icon-play"></button>
+							<button type="button" data-modal="modal" data-video-vk data-video-code-rus="456239017" data-video-code-eng="456239018" data-video-owner="-227578172" class="video__btn icon-play"></button>
 							<div class="video__main">
 								<h2 class="video__title title-md">
 									Видео о нас
@@ -632,18 +632,18 @@
         </div>
     </div>
 </div>
-		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250221193644"></script>
+		<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20250227083052"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250221193644"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250221193644"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250221193644"></script>
-<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250221193644"></script> -->
-<script src="https://vk.com/js/api/openapi.js?169&_v=20250221193644"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20250227083052"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20250227083052"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20250227083052"></script>
+<!-- <script src="https://www.youtube.com/iframe_api?v2.18&_v=20250227083052"></script> -->
+<script src="https://vk.com/js/api/openapi.js?169&_v=20250227083052"></script>
 
-<script src="js/app.min.js?_v=20250221193644"></script>
+<script src="js/app.min.js?_v=20250227083052"></script>
 	</body>
 
 </html>
