video update (Youtube -> VK Video)

--- a/src/site/templates/articles/articles__detail__video.htm
+++ b/src/site/templates/articles/articles__detail__video.htm
@@ -1,4 +1,4 @@
 <div class="article__video">
 								<picture><source srcset="{{COVERVIDEOWEBP}}" type="image/webp"><img src="{{COVERVIDEO}}" class="cover-image" alt="{{ALT}}"></picture>
-								<button type="button" data-modal="modal" data-video data-video-code-rus="{{CODEVIDEO}}" class="article__video-btn icon-play-alternate"></button>
+								<button type="button" data-modal="modal" data-video-vk data-video-code-rus="{{CODEVIDEO}}" data-video-owner="{{OWNER}}" class="article__video-btn icon-play-alternate"></button>
 							</div>
