--- a/src/site/templates/company/partial/company__media__gallery__video.htm
+++ b/src/site/templates/company/partial/company__media__gallery__video.htm
@@ -1,7 +1,7 @@
 <div class="media__item">
 								<div class="media__item-image">
-									<picture><source srcset="{{COVERWEBP}}"type="image/webp"><img src="{{COVER}}" class="cover-image" alt="{{ALT}}"></picture>
-									<button type="button" data-modal="modal" data-video data-video-code-rus="{{CODE}}" class="media__item-btn icon-play-alternate"></button>
+									<picture><source srcset="{{COVERWEBP}}" type="image/webp"><img src="{{COVER}}" class="cover-image" alt="{{ALT}}"></picture>
+									<button type="button" data-modal="modal" data-video-vk data-video-code-rus="{{CODE}}" data-video-owner="{{OWNER}}" class="media__item-btn icon-play-alternate"></button>
 								</div>
 								<div class="media__item-caption">
 									{{TITLE}}
