--- a/src/site/templates/layout/layout.htm
+++ b/src/site/templates/layout/layout.htm
@@ -72,7 +72,8 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js{{VERSION}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js{{VERSION}}"></script>
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221209234202"></script>
-	<script src="https://www.youtube.com/iframe_api{{VERSION}}"></script>
+	<!-- <script src="https://www.youtube.com/iframe_api{{VERSION}}"></script> -->
+	<script src="https://vk.com/js/api/openapi.js?169&_v={{VERSION}}"></script>
 
 	<script src="/js/app.min.js{{VERSION}}"></script>
 
