--- a/src/site/templates/modals/modal_video.htm
+++ b/src/site/templates/modals/modal_video.htm
@@ -1,4 +1,5 @@
-<div id="js-youtube-video"></div>
+<!-- <div id="js-youtube-video"></div> -->
+<div id="js-vk-video"></div>
             <div class="popup__switcher video__switcher">
                 <ul class="video__switcher-list">
                     <li class="video__switcher-item">
