--- a/src/site/templates/video/bl-video.htm
+++ b/src/site/templates/video/bl-video.htm
@@ -1,7 +1,7 @@
 <section class="video">
     <div class="video__container">
         <div class="video__content">
-            <button type="button" data-modal="modal" data-video  data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" class="video__btn icon-play"></button>
+            <button type="button" data-modal="modal" data-video-vk data-video-code-rus="{{CODERUS}}" data-video-code-eng="{{CODEENG}}" data-video-owner="{{OWNER}}" class="video__btn icon-play"></button>
             <div class="video__main">
                 <h2 class="video__title title-md">
                     Видео о нас
@@ -12,7 +12,7 @@
             </div>
             <div class="video__image">
                 <div class="video__image-wrapper">
-                    <picture><source srcset="/img/scaling/video.webp"type="image/webp"><img src="/img/scaling/video.png" class="cover-image" alt="video"></picture>
+                    <picture><source srcset="/img/scaling/video.webp" type="image/webp"><img src="/img/scaling/video.png" class="cover-image" alt="video"></picture>
                 </div>
             </div>
         </div>
