--- a/public/css/style.css
+++ b/public/css/style.css
@@ -233,11 +233,28 @@ body._pc .anim-content .products.active .products__item {
           flex-direction: column;
 }
 
-.popup__body iframe {
+.popup__body #js-vk-video {
   margin: auto 0;
-  width: auto;
+  width: 100%;
   height: 100%;
   min-height: 300px;
+  position: relative;
+}
+
+.popup__body #js-vk-video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.popup__body iframe {
+  margin: auto 0;
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+  aspect-ratio: 16/9;
 }
 
 .popup__close {
@@ -1589,7 +1606,7 @@ body._pc .anim-content .products.active .products__item {
 
 .footer-copy__privacy {
   color: #7b7e89;
-  margin: 0.5em 0em 0em 0em;
+  margin: 1.125em 0em 1.25em 0em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1605,13 +1622,8 @@ body._pc .anim-content .products.active .products__item {
   transition: color 0.3s ease 0s;
 }
 
-.footer-copy__privacy-link:first-child {
-  -ms-grid-row-span: 2;
-  grid-row: span 2;
-}
-
 .footer-copy__privacy-link:not(:last-child) {
-  margin: 0em 0.625em 0em 0em;
+  margin: 0em 0em 0.625em 0em;
 }
 
 .footer-copy__production {
@@ -1619,6 +1631,8 @@ body._pc .anim-content .products.active .products__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   padding: 0em 3.125em 0em 0em;
 }
 
@@ -5077,7 +5091,7 @@ body._pc .anim-content .products.active .products__item {
   }
 
   .footer-copy__privacy {
-    margin: 0em auto 0em 2.1875em;
+    margin: 0em auto 0em 8.75em;
   }
 
   .footer-copy__production {
@@ -5720,18 +5734,7 @@ body._pc .anim-content .products.active .products__item {
   }
 
   .footer-copy__privacy {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-rows: (1fr)[2];
-    grid-template-rows: repeat(2, 1fr);
-    grid-auto-flow: column;
-    -webkit-column-gap: 1rem;
-       -moz-column-gap: 1rem;
-            column-gap: 1rem;
-  }
-
-  .footer-copy__privacy-link:not(:last-child) {
-    margin: 0em 1.25em 0em 0em;
+    margin: 0em auto 0em 7.5em;
   }
 
   .main__image {
@@ -6182,6 +6185,13 @@ body._pc .anim-content .products.active .products__item {
 }
 
 @media (min-width: 1199.98px) {
+  .popup__body #js-vk-video {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+    width: 100%;
+  }
+
   .popup__body iframe {
     -webkit-box-flex: 1;
         -ms-flex-positive: 1;
@@ -6284,10 +6294,23 @@ body._pc .anim-content .products.active .products__item {
   }
 
   .footer-copy__privacy {
+    display: -ms-grid;
+    display: grid;
+    grid-auto-flow: column;
+    -webkit-column-gap: 1rem;
+       -moz-column-gap: 1rem;
+            column-gap: 1rem;
+    -ms-grid-rows: (1fr)[2];
+    grid-template-rows: repeat(2, 1fr);
     -webkit-column-gap: 2rem;
        -moz-column-gap: 2rem;
             column-gap: 2rem;
+    font-size: 0.875rem;
     margin: 0em 0em 0em auto;
+  }
+
+  .footer-copy__privacy-link:not(:last-child) {
+    margin: 0em 1.25em 0em 0em;
   }
 
   .main.main-offset .main__title {
@@ -7052,6 +7075,10 @@ body._pc .anim-content .products.active .products__item {
 
   .navigation__item:not(:nth-last-child(2), :last-child) {
     display: none;
+  }
+
+  .footer-copy__privacy {
+    font-size: 0.875rem;
   }
 
   .more-products__title {
