--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -66,9 +66,9 @@
                 <a href="/ethics-code/" class="footer-copy__privacy-link">
                     Кодекс этики и служебного поведения
                 </a>
-                <!-- <a href="/human-rights-policy/" class="footer-copy__privacy-link">
+                <a href="/human-rights-policy/" class="footer-copy__privacy-link">
                     Политика в области прав человека
-                </a> -->
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
