--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -69,6 +69,9 @@
                 <a href="/human-rights-policy/" class="footer-copy__privacy-link">
                     Политика в области прав человека
                 </a>
+                <a href="/health-and-safety-policy/" class="footer-copy__privacy-link">
+                    Политика в области охраны труда и промышленной безопасности
+                </a>
             </div>
             <div class="footer-copy__production">
                 <div class="footer-copy__production-title">
