--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -64,13 +64,13 @@
                     Антикоррупционная политика
                 </a>
                 <a href="/ethics-code/" class="footer-copy__privacy-link">
-                    Кодекс этики и служебного поведения
+                    Кодекс этики и&nbsp;служебного поведения
                 </a>
                 <a href="/human-rights-policy/" class="footer-copy__privacy-link">
-                    Политика в области прав человека
+                    Политика в&nbsp;области прав человека
                 </a>
                 <a href="/health-and-safety-policy/" class="footer-copy__privacy-link">
-                    Политика в области охраны труда и промышленной безопасности
+                    Политика в&nbsp;области охраны труда и&nbsp;промышленной безопасности
                 </a>
             </div>
             <div class="footer-copy__production">
